# SPH2D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SPH2D.sln
3d_party/: CMakeLists.txt
3d_party/google-test/: CMakeLists.txt
SPH2D/: EOS.h  (+71 more)
sources/RRSPH_CL/: CMakeLists.txt  RRSPHCLVersion.h.in
sources/RRSPH_CL/cl/: ArtificialViscosity.cl  ArtificialViscosity.h  AverageVelocity.cl  AverageVelocity.h  Density.cl  Density.h  EOS.h  ExternalForce.cl  ExternalForce.h  GridFind.cl  InternalForce.cl  InternalForce.h  SmoothingKernel.cl  TimeIntegration.cl  TimeIntegration.h  clparams.h  common.h
sources/RRSPH_CL/docs/: clErrorCodes.txt
sources/RRSPH_CL/include/: CLAdapter.h  CLCommon.h
sources/RRSPH_CL/src/: CLCommon.cpp  CLTimeIntegration.cpp
sources/RRSPH_COMMON/: CMakeLists.txt  RRSPHCOMMONVersion.h.in
sources/RRSPH_COMMON/include/: ArtificialViscosity.h  AverageVelocity.h  CommonIncl.h  ConsistencyCheck.h  Density.h  EOS.h  ExtForce.h  GridUtils.h  Input.h  InternalForce.h  Output.h  SmoothingKernel.h  TimeEstimate.h  TimeFormat.h
sources/RRSPH_COMMON/src/: CLI.cpp  ConsistencyCheck.cpp  EOS.cpp  Input.cpp  Output.cpp  TimeEstimate.cpp
sources/RRSPH_COMMON/tests/: testArtificialViscosityCL.cpp  testArtificialViscosityOMP.cpp  testAverageVelocityCL.cpp  testAverageVelocityOMP.cpp  testDensityCL.cpp  testDensityOMP.cpp  testEOS.cpp  testExternalForceCL.cpp  testExternalForceOMP.cpp  testGridFindCL.cpp  testGridFindOMP.cpp  testGridUtils.cpp  testInternalForceCL.cpp  testInternalForceOMP.cpp  testSPHCommon.cpp  testSmoothingKernel.cpp
sources/RRSPH_FIO/: CMakeLists.txt  RRSPHFIOVersion.h.in
sources/RRSPH_FIO/include/: ExperimentDirectories.h  ExperimentDirectory.h  ExperimentLayer.h  ExperimentLayers.h  Grid.h  RRSPHFIOVersion.h  RRSPH_FIO.h
sources/RRSPH_FIO/src/: ExperimentDirectories.cpp  ExperimentDirectory.cpp  ExperimentLayers.cpp  Grid.cpp  LazyGrid.cpp  RRSPHFIO.cpp  RRSPHFIO_CLI.cpp  Square.cpp  TimeLayer.cpp
sources/RRSPH_FIO/tests/: testExperimentDirectories.cpp  testExperimentDirectory.cpp  testExperimentLayer.cpp  testExperimentLayers.cpp
sources/RRSPH_OMP/: CMakeLists.txt  RRSPHOMPVersion.h.in
sources/RRSPH_OMP/include/: ArtificialViscosity.h  AverageVelocity.h  Density.h  ExtForce.h  GridFind.h  InternalForce.h  PredictHalfStep.h  TimeIntegration.h  UpdateAcceleration.h  WholeStep.h
sources/RRSPH_OMP/src/: ArtificialViscosity.cpp  AverageVelocity.cpp  Density.cpp  ExternalForce.cpp  GridFind.cpp  InternalForce.cpp  Kernel.cpp  PredictHalfStep.cpp  TimeIntegration.cpp  UpdateAcceleration.cpp  WaveMaker.cpp  WholeStep.cpp
sources/RRSPH_PARAMS/: CMakeLists.txt  ParamsVersion.h.in
sources/RRSPH_PARAMS/docs/: ParamsGenerator.txt  PicGenParams.txt  SPH2DParams.txt
sources/RRSPH_PARAMS/include/: ComputingParams.h  ExperimentDirectory.h  ExperimentLayers.h  LoadingParams.h  ModelParams.h  Params.h  ParamsEnumeration.h  ParamsGeneration.h  ParamsIO.h  ParticleParams.h  RRFloat2.h  RRFloat3.h  RRFloatnDArray.h  RRInt2.h  RRInt3.h  RRTypes.h  Types.h
sources/RRSPH_PARAMS/src/: ComputingParams.cpp  ExperimentDirectory.cpp  ExperimentLayers.cpp  ModelParams.cpp  ParamsOutput.cpp  ParticleParams.cpp  Version.h
sources/RRSPH_PARAMS/tests/: testExperimentDirectories.cpp  testExperimentDirectory.cpp  testExperimentLayer.cpp  testExperimentLayers.cpp
sources/SPH2D_CL/: CMakeLists.txt  SPH2DCLVersion.h.in
sources/SPH2D_CL/cl/: ArtificialViscosity.cl  AverageVelocity.cl  Density.cl  EOS.cl  ExternalForce.cl  GridFind.cl  InternalForce.cl  SmoothingKernel.cl  TimeIntegration.cl  clparams.h  common.h
sources/SPH2D_CL/include/: CLAdapter.h  CLCommon.h  SPH2DCLVersion.h
sources/SPH2D_CL/src/: CLCommon.cpp  CLTimeIntegration.cpp
sources/SPH2D_COMMON/: CMakeLists.txt  SPH2DCOMMONVersion.h.in
sources/SPH2D_COMMON/include/: CommonIncl.h  ConsistencyCheck.h  GridUtils.h  Input.h  IsNormalCheck.h  Output.h  SPH2DCOMMONVersion.h  SmoothingKernel.h  TimeEstimate.h  TimeFormat.h  VirtualParticles.h
sources/SPH2D_COMMON/src/: CLI.cpp  ConsistencyCheck.cpp  EOS.cpp  Input.cpp  IsNormalCheck.cpp  Output.cpp  Repl.cpp  TimeEstimate.cpp  TimeFormat.cpp  VirtualParticles.cpp
sources/SPH2D_COMMON/tests/: testArtificialViscosityCL.cpp  testArtificialViscosityOMP.cpp  testAverageVelocityCL.cpp  testAverageVelocityOMP.cpp  testDensityCL.cpp  testDensityOMP.cpp  testEOS.cpp  testExternalForceCL.cpp  testExternalForceOMP.cpp  testGridFindCL.cpp  testGridFindOMP.cpp  testGridUtils.cpp  testInternalForceCL.cpp  testInternalForceOMP.cpp  testSPH.h  testSPHCommon.cpp  testSmoothingKernel.cpp
sources/SPH2D_OMP/: ArtificialViscosity.cpp  CMakeLists.txt  Density.cpp  EOS.cpp  ExternalForce.cpp  InternalForce.cpp  Kernel.cpp  SPH2DOMPVersion.h.in  TimeIntegration.cpp
sources/SPH2D_OMP/include/: ArtificialHeat.h  ArtificialViscosity.h  AverageVelocity.h  Density.h  EOS.h  ExtForce.h  GridFind.h  InternalForce.h  Kernel.h  SPH2DOMPVersion.h  SingleStep.h  TimeIntegration.h  UpdateAcceleration.h  WaveMaker.h
sources/SPH2D_OMP/src/: ArtificialHeat.cpp  ArtificialViscosity.cpp  AverageVelocity.cpp  Density.cpp  EOS.cpp  ExternalForce.cpp  GridFind.cpp  InternalForce.cpp  Kernel.cpp  SingleStep.cpp  TimeIntegration.cpp  UpdateAcceleration.cpp  WaveMaker.cpp
sources/SPH2D_PARAMS/: CMakeLists.txt  ParamsVersion.h.in
sources/SPH2D_PARAMS/default/: ModelParams.json
sources/SPH2D_Params/: CMakeLists.txt
tools/: CMakeLists.txt
tools/FuncAtPoint/: CMakeLists.txt  FuncAtPointVersion.h.in
tools/PartToGridConverter/: CMakeLists.txt  PartToGridConverterVersion.h.in
tools/SPH2D_FIO/: CMakeLists.txt
tools/SPH2D_FIO2/: CMakeLists.txt  SPH2DFIOVersion.h.in
tools/SPH2D_PicGen/: CMakeLists.txt  SPH2DPicGenVersion.h.in
tools/Scripts/: CaseDamBreak2D.py  DamBreakGenerator.py  DamBreakGenerator3D.py  Piston2DGenerator.py  RadialWavesGenerator3D.py  ShallowDamBreakGenerator.py  TsunamiGenerator.py  anPlot.py  scatter3D.py  wavesEstimator.py
tools/WaterProfile/: CMakeLists.txt  WaterProfileVersion.h.in
tools/func_at_point/: CMakeLists.txt
(+207 files in other folders)
